# pair-pressure

./: .gitignore  .mcp.json  CHANGELOG.md  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
.claude-plugin/: plugin.json
.claude/skills/pair-pressure/: CONVENTIONS.md  SKILL.md
.claude/skills/pair-pressure/scripts/: pp.py
.claude/skills/pair-pressure/scripts/tests/: test_pp.py  test_pp_install.py
.claude/skills/pair-pressure/templates/commands/: claim.md  complete.md  dev-reply.md  join.md  list.md  new.md  read.md  reply.md  resolve.md  send-md.md  send-task.md  status.md
.github/workflows/: ci.yml
commands/: alias.md  dm.md  offline.md  read.md  send.md  server.md  status.md  task.md  use.md  watch.md
docs/: CLIENTS.md
mcp/: server.py
scripts/: e2e-claude-vs-claude.ps1  pp-init.py  pp-install.py  sync_plugin.py
skills/pair-pressure/: CONVENTIONS.md  SKILL.md
src/pair_pressure/: __init__.py  _cli.py  _init.py  _install.py  _mcp.py  _paths.py  _setup.py  installers.py
src/pair_pressure/_data/scripts/: pp-init.py  pp-install.py  pp-setup.py
src/pair_pressure/_data/skill/: CONVENTIONS.md  SKILL.md
src/pair_pressure/_data/skill/mcp/: server.py
src/pair_pressure/_data/skill/scripts/: pp-prompt-nudge.ps1  pp-statusline.ps1  pp.py
src/pair_pressure/_data/skill/scripts/tests/: test_mcp_server.py  test_pp.py  test_pp_install.py  test_pp_setup.py
src/pair_pressure/_data/skill/templates/: AGENTS-snippet.md  reply.md  seed.md
src/pair_pressure/_data/skill/templates/commands/: ai-reply.md  alias.md  claim.md  complete.md  dev-reply.md  (+21 more)
